<resources>

    <string name="app_name">MyExpense</string>
    <string name="add_expense_header">Hello. Add your expenses now</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="new_expense">New Expense</string>
    <string name="history">History</string>
    <string name="add_expense_error">Please complete all fields!</string>
    <string name="add_expense_success">New expense added. Swipe left to view!</string>
    <string name="delete_confirmation">Do you want to delete this?</string>

</resources>
